Rendu final via terminal Mac

--- a/frontend/recipe.html
+++ b/frontend/recipe.html
@@ -234,27 +234,49 @@
 											/>
 											<path d="M9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
 										</svg>
-										Recette ID: <span id="recipe-id"></span>
+										<span id="recipe-id"></span>
 									</small>
-									<button id="delete-recipe-btn" class="btn btn-danger">
-										<svg
-											xmlns="http://www.w3.org/2000/svg"
-											width="16"
-											height="16"
-											fill="currentColor"
-											class="bi bi-trash me-1"
-											viewBox="0 0 16 16"
+									<div class="d-flex gap-2">
+										<button
+											id="edit-recipe-btn"
+											class="btn btn-warning"
+											data-bs-toggle="modal"
+											data-bs-target="#editRecipeModal"
 										>
-											<path
-												d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
-											/>
-											<path
-												fill-rule="evenodd"
-												d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
-											/>
-										</svg>
-										Supprimer cette recette
-									</button>
+											<svg
+												xmlns="http://www.w3.org/2000/svg"
+												width="16"
+												height="16"
+												fill="currentColor"
+												class="bi bi-pencil me-1"
+												viewBox="0 0 16 16"
+											>
+												<path
+													d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"
+												/>
+											</svg>
+											Modifier
+										</button>
+										<button id="delete-recipe-btn" class="btn btn-danger">
+											<svg
+												xmlns="http://www.w3.org/2000/svg"
+												width="16"
+												height="16"
+												fill="currentColor"
+												class="bi bi-trash me-1"
+												viewBox="0 0 16 16"
+											>
+												<path
+													d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+												/>
+												<path
+													fill-rule="evenodd"
+													d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+												/>
+											</svg>
+											Supprimer
+										</button>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -421,6 +443,115 @@
 										/>
 									</svg>
 									Ajouter la recette
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ============================================ -->
+		<!-- MODAL - MODIFIER UNE RECETTE -->
+		<!-- ============================================ -->
+		<div
+			class="modal fade"
+			id="editRecipeModal"
+			tabindex="-1"
+			aria-labelledby="editRecipeModalLabel"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header bg-warning text-dark">
+						<h5 class="modal-title" id="editRecipeModalLabel">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="20"
+								height="20"
+								fill="currentColor"
+								class="bi bi-pencil-square me-2"
+								viewBox="0 0 16 16"
+							>
+								<path
+									d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"
+								/>
+								<path
+									fill-rule="evenodd"
+									d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 0-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
+								/>
+							</svg>
+							Modifier la recette
+						</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="modal"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="modal-body">
+						<form id="editRecipeForm">
+							<div class="mb-3">
+								<label for="editRecipeName" class="form-label fw-bold"
+									>Nom de la recette</label
+								>
+								<input
+									type="text"
+									class="form-control"
+									id="editRecipeName"
+									required
+								/>
+							</div>
+							<div class="mb-3">
+								<label for="editRecipeIngredients" class="form-label fw-bold"
+									>Ingrédients (un par ligne)</label
+								>
+								<textarea
+									class="form-control"
+									id="editRecipeIngredients"
+									rows="4"
+									required
+								></textarea>
+							</div>
+							<div class="mb-3">
+								<label for="editRecipeInstructions" class="form-label fw-bold"
+									>Instructions</label
+								>
+								<textarea
+									class="form-control"
+									id="editRecipeInstructions"
+									rows="6"
+									required
+								></textarea>
+							</div>
+							<div class="mb-3">
+								<label for="editRecipePrepTime" class="form-label fw-bold"
+									>Temps de préparation (min)</label
+								>
+								<input
+									type="number"
+									class="form-control"
+									id="editRecipePrepTime"
+									required
+								/>
+							</div>
+							<div class="mb-3">
+								<label for="editRecipeImageUrl" class="form-label fw-bold"
+									>URL de l'image</label
+								>
+								<input type="text" class="form-control" id="editRecipeImageUrl" />
+							</div>
+							<div class="d-flex justify-content-end gap-2">
+								<button
+									type="button"
+									class="btn btn-secondary"
+									data-bs-dismiss="modal"
+								>
+									Annuler
+								</button>
+								<button type="submit" class="btn btn-warning">
+									Enregistrer les modifications
 								</button>
 							</div>
 						</form>
