Rendu final via terminal Mac

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,6 +94,26 @@
 				</div>
 			</div>
 
+			<!-- Search Bar -->
+			<div class="row mb-4 justify-content-center">
+				<div class="col-md-6">
+					<div class="input-group shadow-sm">
+						<span class="input-group-text bg-white border-end-0">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search text-muted" viewBox="0 0 16 16">
+								<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+							</svg>
+						</span>
+						<input
+							type="text"
+							id="searchInput"
+							class="form-control border-start-0 ps-0"
+							placeholder="Rechercher une recette par nom..."
+							aria-label="Rechercher"
+						/>
+					</div>
+				</div>
+			</div>
+
 			<!-- Recipes Grid -->
 			<div class="row g-4" id="recipes-container">
 				<!-- Les recettes seront affichées ici dynamiquement par JavaScript -->
